# Juan-secret-vault

./: LICENSE  README.md
ai/machine-learning/handbook/12-clustering/: page.typ
ai/machine-learning/projects/pokemon-team-builder/: README.md  model.pkl  pyproject.toml
ai/machine-learning/projects/pokemon-team-builder/data/: pokemon_hgss.csv  type_chart.json
ai/machine-learning/projects/pokemon-team-builder/documentation/: conclusions.typ
ai/machine-learning/projects/pokemon-team-builder/src/: main.py  streamlit_app.py
ai/machine-learning/projects/pokemon-team-builder/src/api/: train.py  type_chart.py
ai/machine-learning/projects/pokemon-team-builder/src/domain/pokemon/: pokemon.py  types.py
ai/machine-learning/projects/pokemon-team-builder/src/examples/: cluster.py  cluster_v2.py  clusters_2.py  clusters_3.py
ai/machine-learning/projects/pokemon-team-builder/src/repositories/: dataset_repository.py  type_chart_repository.py
ai/machine-learning/projects/pokemon-team-builder/src/services/: cluster_service.py  team_builder_service.py
ai/machine-learning/projects/pokemon-team-builder/src/training/: train.py
ai/machine-learning/projects/pokemon-team-builder/src/ui/: streamlit_app.py
books/clean-architecture/: main.typ
books/clean-architecture/00-introduction/: page.typ
books/clean-architecture/01/: page.typ
books/clean-architecture/02/: page.typ
books/clean-architecture/03/: page.typ
books/clean-architecture/04/: page.typ
education/competency-based-education-diploma/: README.md
education/competency-based-education-diploma/handbook/: main.typ
emotional-intelligence/handbook/: main.typ
playground/pokemon-game-python/: .gitignore  REAME.md  pyproject.toml
playground/pokemon-game-python/app/: main.py
playground/pokemon-game-python/app/domain/entities/: moves.py  pokemon.py
(+18 files in other folders)
