[project]
name = "pokemon-python"
version = "0.1.0"
description = "A simple Pokemon python project using pyproject.toml"
authors = [{ name = "Juan Manuel Zurita Quinteros" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
pokemon-python = "app:main"