[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-team-builder"
version = "0.1.0"
description = "Pokemon Team Builder using clustering"
authors = [
    { name = "Juan Manuel Zurita Quinteros", email = "juanzq10dev@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "matplotlib==3.10.8",
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "streamlit>=1.35.0"
]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["sklearn.*", "type_chart"]
ignore_missing_imports = true